--- a/war/Travel_Smart_Monkey.html
+++ b/war/Travel_Smart_Monkey.html
@@ -12,6 +12,8 @@
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="Travel_Smart_Monkey.css">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.min.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
@@ -23,7 +25,9 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="travel_smart_monkey/travel_smart_monkey.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="travel_smart/travel_smart.nocache.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   </head>
 
   <!--                                           -->
