--- a/war/Travel_Smart_Monkey.html
+++ b/war/Travel_Smart_Monkey.html
@@ -47,17 +47,17 @@
 
     <h1>Web Application Starter Project</h1>
 
-    <table align="center">
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
-      </tr>
-      <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
-      </tr>
-    </table>
+	<form>
+	  <div class="form-group">
+	    <input type="text" class="form-control" id="carmodel" placeholder="Car Model">
+	  </div>
+	  <div class="form-group">
+	    <input type="text" class="form-control" id="startingPoint" placeholder="Current Location">
+	  </div>
+	  <div class="form-group">
+	    <input type="text" class="form-control" id="destination" placeholder="Destination">
+	  </div>
+	  <button type="submit" class="btn btn-default" id="searchBtn" >Search</button>
+	</form>
   </body>
 </html>
