--- a/war/Sample.html
+++ b/war/Sample.html
@@ -56,5 +56,8 @@
 	  </div>
 	  <button type="submit" class="btn btn-default" id="searchBtn" >Search</button>
 	</form>
+	<div id = "travelTable">
+
+</div>
   </body>
 </html>
